--- a/links/links.htm
+++ b/links/links.htm
@@ -1,1 +1,172 @@
+<HTML>
+<HEAD>
 
+<body background="bkg2.jpg">
+
+
+<TITLE>Links.</TITLE>
+
+<BODY>
+
+<!-- Search Google -->
+
+<center>
+
+<form method="get" action="http://www.google.com/custom" target="_top">
+
+<table bgcolor="#ffffff">
+
+<tr><td nowrap="nowrap" valign="top" align="left" height="32">
+
+<a href="http://www.google.com/">
+
+<img src="http://www.google.com/logos/Logo_25wht.gif" border="0" alt="Google" align="middle"></img></a>
+
+<label for="sbi" style="display: none">Enter your search terms</label>
+
+<input type="text" name="q" size="31" maxlength="255" value="" id="sbi"></input>
+
+<label for="sbb" style="display: none">Submit search form</label>
+
+<input type="submit" name="sa" value="Search" id="sbb"></input>
+
+<input type="hidden" name="client" value="pub-0982093050363034"></input>
+
+<input type="hidden" name="forid" value="1"></input>
+
+<input type="hidden" name="ie" value="ISO-8859-1"></input>
+
+<input type="hidden" name="oe" value="ISO-8859-1"></input>
+
+<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#336699;VLC:663399;AH:center;BGC:FFFFFF;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;FORID:1"></input>
+
+<input type="hidden" name="hl" value="en"></input>
+
+</td></tr></table>
+
+</form>
+
+</center>
+
+<!-- Search Google -->
+
+
+
+<hr>
+
+<center>
+
+
+
+<script type="text/javascript"><!--
+
+google_ad_client = "pub-0982093050363034";
+
+google_alternate_color = "0000FF";
+
+google_ad_width = 728;
+
+google_ad_height = 90;
+
+google_ad_format = "728x90_as";
+
+google_ad_type = "text_image";
+
+google_ad_channel = "";
+
+//-->
+
+</script>
+
+<script type="text/javascript"
+
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+
+</script>
+
+
+
+</center>
+
+<hr>
+
+<h2 align=center>Videos that show sparkbanbuzz.com projects.</h2>
+<p>
+<a href="http://youtube.com/watch?v=WNl0sFViaxs">Flame Triode With Gain.</a>
+<p>
+<a href="http://www.youtube.com/watch?v=5gGddyFz3aQ">Homemade Cathode Ray Tube.</a>
+<p>
+<a href="http://www.youtube.com/watch?v=2QBOAx3IGZ4">Oscilloscope Made With Homemade Cathode Ray Tube.</a>
+<p>
+<a href="http://www.youtube.com/watch?v=OgCqsNhanSo">The Worlds Smallest Cathode Ray Tube???</a>
+<p>
+<a href="http://www.youtube.com/watch?v=f17RZjBecCY">The Worlds Smallest Cathode Ray Tube? Second version.</a>
+<p>
+<a href="http://www.youtube.com/watch?v=iSTviEJr5UM">Simple Homemade Tea Laser.</a>
+<p>
+<a href="http://www.youtube.com/watch?v=svSUzUBSkD4">Simple Homemade Tea Laser Only Three Inches Long.</a>
+<p>
+<a href="http://www.youtube.com/watch?v=hcD85lj3qmI">Simple Homemade Tea Laser Running At 120 Hz.</a>
+
+<h2 align=center>I also design electronic music synthesizers and wind instruments.</h2>
+<p>Vidio of myself, Joel Peskin and Michael Brecker playing my electronic wind instruments.  
+<p><a href="http://www.youtube.com/watch?v=sQY_hU_KIM0">Nyler Steiner_Michael Brecker_ Joel C. Peskin EWI Video</a>
+<p>
+
+
+<p>
+<h2 align=center>Other Great Websites.</h2>
+
+<p>
+Early Receivers using a crystal detector as a negative resistance device.  <a href="http://www.a-reny.com/iexplorer/cristadyne.html">Crystadyne Receivers</a>
+
+<p>
+Slater Harrison has produced a fantastic web site of exotic scientific toys that can be made from household materials.  There is also a lot of links to videos and additional information about walkalong gliders,  one of the coolest things I have ever seen.
+<a href="http://sciencetoymaker.org/">http://sciencetoymaker.org/</a>
+
+<p>
+The Professors website that I make reference to in my Simple Homemade TEA Lasers article.  There is a lot of technical background concerning TEA Lasers, that I do not cover in my article, and it is written by someone who really knows what is going on.<a href="http://www.technology.niagarac.on.ca/people/mcsele/lasers/LasersTEA.htm">Professor Mark Csele's Homebuilt Lasers Page.</a>
+<p>
+
+<p>
+Michael J. Rainey  AA1TJ has put up one of the best sites ever for experimental ham radio home brew QRP projects.  His "New England Code Talker" is a simple voice powered CW transmitter that has made contacts over a distance of 923 miles.
+"Diamp" is an amplifier circuit that uses common rectifier diodes to amplify just like a transistor.  I built a diode amplifier circuit similar to his and it worked very well.  There are many other great projects described there.  <a href="http://fhs-consulting.com/aa1tj/radio.html">Michael J. Rainey  AA1TJ</a>
+<p>
+
+
+A company that sells glow in the dark materials.<a href="http://www.glowinc.com">Glow in the Dark Paint and Powder</a>
+<p>
+A great page on Carbon Arc Oscillators.  <a href="http://www.acmi.net.au/AIC/SINGING_ARC_MOELLER.html">Carbon Arc Oscillators.</a>
+<p>
+
+A couple of really great science experimenters pages.
+<p>
+ <a href="http://www.eskimo.com
+/~billb/scied.html">Bill Beaty's Science Page</a>
+<p>
+<a href="http://www.scitoys.com">Scitoys.com.</a>
+<p>
+
+<p>Spud Guns,Air Cannons, and the explanation of quick release air valves and much more great stuff can be found at 
+<a href="http://www.frii.com/~bsimon/backyard.html">Backyard 
+Ballistics.  </a>Check it out!!
+
+<hr>
+
+<h3><a href="http://www.sparkbangbuzz.com/">Sparkbangbuzz Home Page.</a></h3>
+
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
+</script>
+
+<script type="text/javascript">
+
+_uacct = "UA-490386-1";
+
+urchinTracker();
+
+</script>
+
+</BODY>
+</HTML>
