--- a/static-flyers/static-electricity-flyers.htm
+++ b/static-flyers/static-electricity-flyers.htm
@@ -1,1 +1,175 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
 
+<body background="bkg2.jpg">
+
+<TITLE>Fly Objects With Static Electricity</TITLE>
+
+<META content="text/html; charset=windows-1252" http-equiv=Content-Type>
+<META content="MSHTML 5.00.2614.3500" name=GENERATOR></HEAD>
+
+
+<BODY>
+
+<!-- Search Google -->
+
+<center>
+
+<form method="get" action="http://www.google.com/custom" target="_top">
+
+<table bgcolor="#ffffff">
+
+<tr><td nowrap="nowrap" valign="top" align="left" height="32">
+
+<a href="http://www.google.com/">
+
+<img src="http://www.google.com/logos/Logo_25wht.gif" border="0" alt="Google" align="middle"></img></a>
+
+<label for="sbi" style="display: none">Enter your search terms</label>
+
+<input type="text" name="q" size="31" maxlength="255" value="" id="sbi"></input>
+
+<label for="sbb" style="display: none">Submit search form</label>
+
+<input type="submit" name="sa" value="Search" id="sbb"></input>
+
+<input type="hidden" name="client" value="pub-0982093050363034"></input>
+
+<input type="hidden" name="forid" value="1"></input>
+
+<input type="hidden" name="ie" value="ISO-8859-1"></input>
+
+<input type="hidden" name="oe" value="ISO-8859-1"></input>
+
+<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#336699;VLC:663399;AH:center;BGC:FFFFFF;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;FORID:1"></input>
+
+<input type="hidden" name="hl" value="en"></input>
+
+</td></tr></table>
+
+</form>
+
+</center>
+
+<!-- Search Google -->
+
+
+
+<hr>
+
+<center>
+
+
+
+<script type="text/javascript"><!--
+
+google_ad_client = "pub-0982093050363034";
+
+google_alternate_color = "0000FF";
+
+google_ad_width = 728;
+
+google_ad_height = 90;
+
+google_ad_format = "728x90_as";
+
+google_ad_type = "text_image";
+
+google_ad_channel = "";
+
+//-->
+
+</script>
+
+<script type="text/javascript"
+
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+
+</script>
+
+
+
+</center>
+
+<hr>
+
+<basefont size="3"/><b>
+<H1 align=center><B>Fly Objects With Static Electricity</B></h1>
+<H3 align="right"><B>By Nyle Steiner K7NS.</B></h3>
+<H3 align="right"><B>June 2011.</B></h3>  
+
+<p>
+<hr>
+
+<p>Objects made from thin plastic grocery bag material are light enough to be held aloft and flown using electrostatic repulsion.  The plastic material can be charged by rubbing it against a Formica surface with a cotton cloth.  Another object such as a balloon can be similarly charged and held below the plastic material to keep it in the air.
+
+<P><center><IMG src="ns4819-3523.jpg"/></h2></center>
+<p>This flying ring is a two inch section cut from a grocery produce bag.  Both the flying object and the balloon must be charged to the same polarity.  
+<hr>
+<p>The ring of plastic bag material was charged by rubbing it against a Formica counter top with a cotton cloth and the balloon was charged by rubbing it against the cotton cloth.
+<P><center><IMG src="ns4838-640.jpg"/>
+<P><IMG src="ns4822-1515.jpg"/>
+<P><IMG src="ns4839-640.jpg"/></center>
+
+<hr>
+<H2 align=center><B>Static Electricity Walkalong Glider.</B></h2>
+<P><center><IMG src="ns4814-916.jpg"/></center>
+<p>The glider is very fun to fly because it has an aerodynamic stability that keeps it facing in the direction it is being pushed by the balloon.  It is just like flying a walkalong glider but it is using electrostatic repulsion instead of lift from a moving flat surface.  Flying the glider above a charged flat piece of styrofoam will give the same look and sensation of flying an actual walkalong glider.
+<p>It would be great to do more experimenting with making a hybrid walkalong glider that could fly using both slope lift and electrostatic lift.
+
+<hr>
+<p>To make the glider, start with a 3 1/2 inch square of plastic grocery bag material.
+<P><center><IMG src="ns4815-1108.jpg"/></center>
+
+<hr>
+<p>Fold in half.
+<P><center><IMG src="ns4815-1420.jpg"/></center>
+
+<hr>
+<p>Wrap a 1/2 inch long piece of scotch tape around the bottom as shown.
+<P><center><IMG src="ns4815-2212.jpg"/></center>
+<P><center><IMG src="ns4815-2818.jpg"/></center>
+<P><center><IMG src="ns4815-3416.jpg"/></center>
+<P><center><IMG src="ns4815-3526.jpg"/></center> 
+<p><center><IMG src="ns4815-3727.jpg"/></center>
+
+<hr>
+<p>Charge the glider by rubbing with cotton cloth as shown.  The glider seems to have better pitch stability if just the top area is rubbed and charged.
+<P><center><IMG src="ns4821-1615.jpg"/></center>
+<P><center><IMG src="ns4839-640.jpg"/></center>
+
+<hr>
+<p>With the balloon in one hand, grab the charged glider with the other as shown and toss it into the air using a very quick motion to keep it from adhering to your hand.  Move the balloon under the glider to keep it aloft and control it's flight.  With a little practice, you will be able to fly patterns with much control by letting the glider fall a little in front of the balloon and pushing it forward.  It is even possible to make the glider do loops.
+<P><center><IMG src="ns4821-1908.jpg"/></center>
+<p><center><IMG src="ns4816-806.jpg"/></center>
+
+<hr>
+<p>The clear plastic grocery bags also work very well.  I happened to find a yellow produce bag and used it for the photographs because of it's increased visibility.
+<p>Many kinds of objects can be used instead of a balloon to lift electrostatic flyers.  Some have had good results using a flat piece of styrofoam rubbed with the cloth.
+<p>According to the laws of physics, an object floating above an infinitely large charged plane will experience the same repulsive force at all distances.  This means that the electrostatic flyer will fly much higher above a very large flat piece of charged styrofoam.
+
+<p>Every once in a while, for reasons I am not sure I can explain, especially with new pieces of plastic, I have experienced having the plastic charge to the wrong polarity.  Sometimes the plastic can even end up with both positive and negative charges in different areas on the same piece.  Rubbing several times on both sides will usually correct this.  Once the plastic is charged right, it will usually work well thereafter.
+
+I had problems properly charging a plastic ring that was partially cut from the middle of a large printed logo.  The printing seemed to have a very adverse effect on the ability of the plastic to charge well.
+
+<p>Experimentation is the main key to all of this.  There may be better materials than cotton fabric for rubbing but my success with it has been good enough that I have not spent much time yet trying others.  Wool is always mentioned whenever static electricity is discussed.  The Formica surface seems to be one of the best materials I have tried for rubbing the plastic against.  For doing these experiments outside of the kitchen, I have a piece of Formica that I can carry around. 
+
+<hr>
+
+<h3><a href="http://www.sparkbangbuzz.com/">Sparkbangbuzz Home Page.</a></h3>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
+</script>
+
+<script type="text/javascript">
+
+_uacct = "UA-490386-1";
+
+urchinTracker();
+
+</script>
+
+</BODY>
+</HTML>
